--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Teste GitHub</h1>
     <p>Teste GitHub. Teste GitHub.</p>
+    <p>Teste GitHub. Teste GitHub 2.</p>
 </body>
 </html>
